toolchain/internal/core/analysis/testdata/errors/spreads/undefined_spread.vdl
// @expect: E202

type User {
  ...BaseUser
}
